fixed an issue with viewpager making the elements fill up entire spaceand overlap

--- a/CSS/navigation.css
+++ b/CSS/navigation.css
@@ -39,11 +39,6 @@ view-pager {
     height: 100%;
 }
 
-view-pager * {
-    width: 100%;
-    height: 100%;
-}
-
 view-pager:first-child {
     display: block;
   }
